add/remove navigation

--- a/templates/prove.html
+++ b/templates/prove.html
@@ -9,7 +9,7 @@
 		<form id='prove-form'>
     	<header>PROVE</header>
         <select id='type' required>
-            <option selected disabled>--TYPE--</option>
+            <option selected disabled>--PROVE TYPE--</option>
             <option value='composition'>COMPOSITION</option>
             <option value='license'>LICENSE</option>
             <option value='recording'>RECORDING</option>
