--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,7 @@
 	  <button id='home'>HOME</button>
 	  <form id='search'>
 	      <select form='search' id='type' required>
-	          <option value='' selected disabled>--TYPE--</option>
+	          <option value='' selected disabled>--SEARCH TYPE--</option>
 	          <option value='composition'>COMPOSITION</option>
 	          <option value='license'>LICENSE</option>
 	          <option value='recording'>RECORDING</option>
