--- a/templates/verify.html
+++ b/templates/verify.html
@@ -9,7 +9,7 @@
     <form id='verify-form'>
         <header>VERIFY</header>
         <select id='type' required>
-            <option selected disabled>--TYPE--</option>
+            <option selected disabled>--VERIFY TYPE--</option>
             <option value='composition'>COMPOSITION</option>
             <option value='license'>LICENSE</option>
             <option value='recording'>RECORDING</option>
