--- a/templates/license.html
+++ b/templates/license.html
@@ -22,7 +22,7 @@
           <input type='text' name='licenseHolderId' placeholder='LICENSE-HOLDER ID' required />
         </div>
         <label for='validFrom'>VALID FROM</label>
-        <input type='date' id='validFrom' required />
+        <input type='date' id='validFrom' required /><br>
         <label for='validThrough'>VALID THROUGH</label>
         <input type='date' id='validThrough' required />
         <input type='submit' value='LICENSE' />
@@ -31,7 +31,6 @@
 		<br><br>
 		<button id='logout'>LOGOUT</button>
     <script>
-			require('../js/common.js')
       require('../js/license.js')
     </script>
   </body>
