--- a/templates/license.html
+++ b/templates/license.html
@@ -8,18 +8,18 @@
     <button id='home'>HOME</button>
     <form id='license'>
 				<div>
-					<button id='add-licenseFor'>+</button>
-					<button id='remove-licenseFor'>-</button>
+					<button id='add-license-for'>ADD LICENSE-FOR</button>
+					<button id='remove-license-for'>REMOVE LICENSE-FOR</button>
 				</div><br>
-				<div id='licenseFors'>
-					<input type='text' name='licenseForId' placeholder='COMPOSITION/RECORDING ID' required />
+				<div id='license-for'>
+					<input type='text' name='license-for' placeholder='LICENSE-FOR' required />
 				</div>
 				<div>
-					<button id='add-licenseHolder'>+</button>
-					<button id='remove-licenseHolder'>-</button>
+					<button id='add-license-holder'>ADD LICENSE-HOLDER</button>
+					<button id='remove-license-holder'>REMOVE LICENSE-HOLDER</button>
 				</div><br>
-        <div id='licenseHolders'>
-          <input type='text' name='licenseHolderId' placeholder='LICENSE-HOLDER ID' required />
+        <div id='license-holder'>
+          <input type='text' name='license-holder' placeholder='LICENSE-HOLDER' required />
         </div>
         <label for='validFrom'>VALID FROM</label>
         <input type='date' id='validFrom' required /><br>
