change templates, var names

--- a/templates/composition.html
+++ b/templates/composition.html
@@ -18,13 +18,13 @@
 				</div><br>
         <div id='composer'>
 					<div>
-          	<input type='text' class='party' name='composer' placeholder='COMPOSER' required />
+          	<input type='text' class='subject' name='composer' placeholder='COMPOSER' required />
 						<input type='text' name='signature' placeholder='SIGNATURE' style='float:left;width:0%;' />
 						<input type='number' name='split' minimum=1 maximum=99 placeholder='SPLIT' style='float:left;width:0%;' />
 					</div>
         </div>
-        <input type='text' id='inLanguage' placeholder='LANGUAGE' />
-        <input type='text' id='iswcCode' placeholder='ISWC CODE' />
+        <input type='text' id='language' placeholder='LANGUAGE' />
+        <input type='text' id='iswc' placeholder='ISWC' />
         <input type='text' id='name' placeholder='TITLE' required /><br><br>
 				<div>
 					<button id='add-publisher'>ADD PUBLISHER</button>
