--- a/templates/prove.html
+++ b/templates/prove.html
@@ -16,8 +16,8 @@
             <option value='right'>RIGHT</option>
         </select><br><br>
         <input type='text' id='challenge' placeholder='CHALLENGE' required />
-        <input type='text' id='txId' required />
-        <input type='text' id='userId' required />
+        <input type='text' id='tx' required />
+        <input type='text' id='user' required />
         <input type='submit' value='PROVE' />
     </form>
     <pre id='response-text'></pre>
