--- a/templates/recording.html
+++ b/templates/recording.html
@@ -18,7 +18,7 @@
 				</div><br>
         <div id='artist'>
 					<div>
-						<input type='text' class='party' name='artist' placeholder='ARTIST' style='float:left;width:60%;' required />
+						<input type='text' class='subject' name='artist' placeholder='ARTIST' style='float:left;width:60%;' required />
 						<input type='text' name='license' placeholder='LICENSE' style='float:left;width:20%;' />
 						<input type='text' name='right' placeholder='RIGHT' style='float:left;width:20%;' />
 						<input type='text' name='signature' placeholder='SIGNATURE' style='float:left;width:0%;' />
@@ -27,12 +27,12 @@
         </div>
         <input type='text' id='composition' placeholder='COMPOSITION' required />
         <input type='text' id='duration' placeholder='DURATION' />
-        <input type='text' id='isrcCode' placeholder='ISRC CODE' /><br><br>
+        <input type='text' id='isrc' placeholder='ISRC' /><br><br>
 				<div>
-					<button id='add-record-label'>ADD RECORD-LABEL</button>
-					<button id='remove-record-label'>REMOVE RECORD-LABEL</button>
+					<button id='add-label'>ADD LABEL</button>
+					<button id='remove-label'>REMOVE LABEL</button>
 				</div><br>
-				<div id='record-label'></div><br><br>
+				<div id='label'></div><br><br>
         <input type='text' id='url' placeholder='URL' />
 				<input type='submit' id='submit' />
     </form>
