--- a/templates/right.html
+++ b/templates/right.html
@@ -6,12 +6,12 @@
 	</head>
   <body>
     <button id='home'>HOME</button>
-    <form id='right' name='right-form'>
+    <form id='right-form'>
         <header>RIGHT</header>
-        <input type='number' id='percentShares' placeholder='PERCENT SHARES' min=1 max=100 required />
-        <input type='text' id='prevRightId' placeholder='PREVIOUS RIGHT ID' />
-        <input type='text' id='recipientId' placeholder='RECIPIENT ID' required />
-        <input type='text' id='rightToId' placeholder='COMPOSITION/RECORDING ID' required />
+        <input type='number' id='percent-shares' placeholder='PERCENT SHARES' min=1 max=100 required />
+        <input type='text' id='previous-right' placeholder='PREVIOUS RIGHT' />
+        <input type='text' id='recipient' placeholder='RECIPIENT' required />
+        <input type='text' id='right-to' placeholder='RIGHT-TO' required />
         <input type='submit' value='RIGHT' />
     </form>
     <pre id='response-text'></pre>
