--- a/templates/verify.html
+++ b/templates/verify.html
@@ -17,8 +17,8 @@
         </select><br><br>
         <input type='text' id='challenge' placeholder='CHALLENGE' required />
 	      <input type='text' id='signature' placeholder='SIGNATURE' required />
-        <input type='text' id='txId' required />
-        <input type='text' id='userId' required />
+        <input type='text' id='tx' required />
+        <input type='text' id='user' required />
         <input type='submit' value='VERIFY' />
     </form>
     <pre id='response-text'></pre>
