changes for api

--- a/templates/license.html
+++ b/templates/license.html
@@ -8,11 +8,11 @@
     <button id='home'>HOME</button>
     <form id='license'>
 				<div>
-					<button id='add-license-for'>ADD LICENSE-FOR</button>
-					<button id='remove-license-for'>REMOVE LICENSE-FOR</button>
+					<button id='add-asset'>ADD ASSET</button>
+					<button id='remove-asset'>REMOVE ASSET</button>
 				</div><br>
-				<div id='license-for'>
-					<input type='text' class='subject' name='license-for' placeholder='LICENSE-FOR' required />
+				<div id='asset'>
+					<input type='text' class='subject' name='asset' placeholder='ASSET' required />
 				</div>
 				<div>
 					<button id='add-license-holder'>ADD LICENSE-HOLDER</button>
@@ -21,8 +21,6 @@
         <div id='license-holder'>
           <input type='text' class='subject' name='license-holder' placeholder='LICENSE-HOLDER' required />
         </div>
-        <label for='valid-from'>VALID FROM</label>
-        <input type='date' id='valid-from' required /><br>
         <label for='valid-through'>VALID THROUGH</label>
         <input type='date' id='valid-through' required />
         <input type='submit' value='LICENSE' />
