modified proof/verification, temporarily added navigation from login

--- a/templates/verify.html
+++ b/templates/verify.html
@@ -8,13 +8,15 @@
     <button id='home'>HOME</button>
     <form id='verify-form'>
         <header>VERIFY</header>
-        <select id='type' required>
-            <option selected disabled>--VERIFY TYPE--</option>
-            <option value='composition'>COMPOSITION</option>
-            <option value='license'>LICENSE</option>
-            <option value='recording'>RECORDING</option>
-            <option value='right'>RIGHT</option>
-        </select><br><br>
+				<select id='type' required>
+						<option selected disabled>--VERIFY TYPE--</option>
+							<option value='artist'>ARTIST</option>
+							<option value='composer'>COMPOSER</option>
+							<option value='license-holder'>LICENSE-HOLDER</option>
+							<option value='publisher'>PUBLISHER</option>
+							<option value='record-label'>RECORD-LABEL</option>
+							<option value='right-holder'>RIGHT-HOLDER</option>
+				</select><br><br>
         <input type='text' id='challenge' placeholder='CHALLENGE' required />
 	      <input type='text' id='signature' placeholder='SIGNATURE' required />
         <input type='text' id='tx' required />
